--- a/playground/package.json
+++ b/playground/package.json
@@ -16,6 +16,7 @@
     "react-native": "~0.55.4",
     "react-native-elements": "^1.1.0",
     "react-native-vector-icons": "^6.4.2",
+    "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "three": "^0.87.0"
   },
